--- a/disinfectants.html
+++ b/disinfectants.html
@@ -472,6 +472,22 @@
         .collapse {
             transition: all 0.3s ease;
         }
+
+        .dropdown-menu {
+            background-color: #ffffff;
+            border: none;
+            border-radius: 0;
+            margin-top: 0;
+            padding: 0;
+        }
+
+        .dropdown-item {
+            color: rgba(255, 255, 255, 0.7);
+            padding: 0.7rem 1.5rem;
+            transition: all 0.3s ease;
+        }
+
+        .dropdown-item:hover {
     </style>
     <title>GenOasis - Disinfectants</title>
 	<script src="https://www.google.com/recaptcha/api.js?render=6LdbbNEqAAAAAICt9O0PGfaTPi4ikCI8gBVaannf"></script>
