--- a/about.html
+++ b/about.html
@@ -31,6 +31,47 @@
 				font-weight: 600;
 				font-size: 1.5rem;
 			}
+			.dropdown-menu {
+				background-color: #ffffff;
+				border: none;
+				border-radius: 0;
+				margin-top: 0;
+				padding: 0;
+			}
+
+			.dropdown-item {
+				color: rgba(255, 255, 255, 0.7);
+				padding: 0.7rem 1.5rem;
+				transition: all 0.3s ease;
+			}
+
+			.dropdown-item:hover {
+				background-color: rgba(255, 255, 255, 0.1);
+				color: white;
+			}
+
+			.dropdown:hover .dropdown-menu {
+				display: block;
+			}
+
+			@media (max-width: 768px) {
+				.dropdown-menu {
+					background-color: transparent;
+					border: none;
+					padding-left: 1rem;
+				}
+				
+				.dropdown-item {
+					padding: 0.5rem 1rem;
+				}
+			}
+
+			/* Active state for dropdown items */
+			.dropdown-item.active, 
+			.dropdown-item:active {
+				background-color: rgba(255, 255, 255, 0.2);
+				color: white;
+			}
 		</style>
 		<title>GenOasis - About Us</title>
 		<script src="https://www.google.com/recaptcha/api.js?render=6LdbbNEqAAAAAICt9O0PGfaTPi4ikCI8gBVaannf"></script>
@@ -57,7 +98,6 @@
 
 		<!-- Start Header/Navigation -->
 		<nav class="custom-navbar navbar navbar navbar-expand-md navbar-dark bg-dark" arial-label="GenOasis navigation bar">
-
 			<div class="container">
 				<a class="navbar-brand" href="index.html">
 					<img src="images/logo.png" alt="Company Logo" style="height: 40px;">
@@ -68,16 +108,31 @@
 
 				<div class="collapse navbar-collapse" id="navbarsGenOasis">
 					<ul class="custom-navbar-nav navbar-nav ms-auto mb-2 mb-md-0">
-						<li class="nav-item ">
+						<li class="nav-item">
 							<a class="nav-link" href="index.html">Home</a>
 						</li>
-						<li class="active"><a class="nav-link" href="about.html">About us</a></li>
-						<li><a class="nav-link" href="Products.html">Products</a></li>
+						<li><a class="nav-link" href="about.html">About us</a></li>
+						<li class="nav-item dropdown">
+							<a class="nav-link dropdown-toggle" href="Products.html" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+								Products
+							</a>
+							<ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+								<li><a class="dropdown-item" href="frpmedia.html">RO Pressure Vessels & FRP Filters</a></li>
+								<li><a class="dropdown-item" href="membranes.html">Membrane Products</a></li>
+								<li><a class="dropdown-item" href="pumps.html">Pumps</a></li>
+								<li><a class="dropdown-item" href="filters.html">Filter Cartridges & Housings</a></li>
+								<li><a class="dropdown-item" href="sandmedia.html">Sand Media & Ion Exchange Resins</a></li>
+								<li><a class="dropdown-item" href="chemicals.html">Water Treatment Chemicals</a></li>
+								<li><a class="dropdown-item" href="Wastewater.html">Waste Water Equipments</a></li>
+								<li><a class="dropdown-item" href="instruments.html">Instruments & Lab Apparatus</a></li>
+								<li><a class="dropdown-item" href="disinfectants.html">Disinfection Products</a></li>
+								<li><a class="dropdown-item" href="valves.html">Valves, Couplings & Fittings</a></li>
+							</ul>
+						</li>
 						<li><a class="nav-link" href="contact.html">Contact us</a></li>
 					</ul>
 				</div>
 			</div>
-				
 		</nav>
 		<!-- End Header/Navigation -->
 
@@ -180,7 +235,7 @@
 				<div class="row justify-content-between align-items-center">
 					<div class="col-lg-6">
 						<h2 class="section-title">Why Choose Us</h2>
-						<p style="color: black;">Choosing GenOasis means partnering with a company committed to excellence, innovation, and sustainability. Our comprehensive range of high-quality products is designed to meet the stringent demands of water treatment, industrial applications, and laboratory environments, ensuring exceptional performance and reliability. We offer customized solutions tailored to your unique needs, backed by a dedicated team of experts ready to support you every step of the way. At GenOasis, we don’t just provide products—we deliver solutions that empower your operations and contribute to a sustainable future.</p>
+						<p style="color: black;">Choosing GenOasis means partnering with a company committed to excellence, innovation, and sustainability. Our comprehensive range of high-quality products is designed to meet the stringent demands of water treatment, industrial applications, and laboratory environments, ensuring exceptional performance and reliability. We offer customized solutions tailored to your unique needs, backed by a dedicated team of experts ready to support you every step of the way. At GenOasis, we don't just provide products—we deliver solutions that empower your operations and contribute to a sustainable future.</p>
 
 						<div class="row my-5">
 							<div class="col-6 col-md-6">
@@ -200,7 +255,7 @@
 										<img src="images/bag.svg" alt="Image" class="imf-fluid">
 									</div>
 									<h3 style="font-weight: 600;">Customized Solutions</h3>
-									<p>We understand that each client’s needs are unique. Our team works closely with you to provide tailored solutions that align with your specific requirements, ensuring optimal results and maximum efficiency.
+									<p>We understand that each client's needs are unique. Our team works closely with you to provide tailored solutions that align with your specific requirements, ensuring optimal results and maximum efficiency.
 									</p>
 								</div>
 							</div>
@@ -273,7 +328,7 @@
 							<div class="col-6 col-sm-6 col-md-4">
 								<ul class="list-unstyled">
 									<li><i class="fas fa-map-marker-alt me-2"></i>6, Balaji St, Guduvancherry<br>Chennai, Tamil Nadu, India</li>
-									<li><i class="fas fa-phone me-2"></i>+91 8939 167 316</li>
+									<li><i class="fas fa-phone me-2"></i>+91 892 588 3227</li>
 									<li><i class="fas fa-envelope me-2"></i>info@genoasis.com</li>
 								</ul>
 							</div>
