--- a/contact.html
+++ b/contact.html
@@ -27,6 +27,74 @@
 		<link href="css/style.css" rel="stylesheet">
 		<title>GenOasis - Contact Us</title>
         <script src="https://www.google.com/recaptcha/api.js?render=6LdbbNEqAAAAAICt9O0PGfaTPi4ikCI8gBVaannf"></script>
+        <style>
+            .catalog-section {
+                background-color: #ffffff;
+                border-top: 1px solid #ffffff;
+            }
+
+            .catalog-section h2 {
+                color: #333;
+                font-weight: 600;
+            }
+
+            .catalog-section p {
+                color: #666;
+            }
+
+            .catalog-section .btn-primary {
+                padding: 12px 30px;
+                font-size: 1.1rem;
+                transition: all 0.3s ease;
+            }
+
+            .catalog-section .btn-primary:hover {
+                transform: translateY(-2px);
+                box-shadow: 0 5px 15px rgba(0,0,0,0.1);
+            }
+
+            .dropdown-menu {
+                background-color: #ffffff;
+                border: none;
+                border-radius: 0;
+                margin-top: 0;
+                padding: 0;
+            }
+
+            .dropdown-item {
+                color: rgba(255, 255, 255, 0.7);
+                padding: 0.7rem 1.5rem;
+                transition: all 0.3s ease;
+            }
+
+            .dropdown-item:hover {
+                background-color: rgba(255, 255, 255, 0.1);
+                color: white;
+            }
+
+            .dropdown:hover .dropdown-menu {
+                display: block;
+            }
+
+            @media (max-width: 768px) {
+                .dropdown-menu {
+                    background-color: transparent;
+                    border: none;
+                    padding-left: 1rem;
+                }
+                
+                .dropdown-item {
+                    padding: 0.5rem 1rem;
+                }
+            }
+
+            /* Active state for dropdown items */
+            .dropdown-item.active, 
+            .dropdown-item:active {
+                background-color: rgba(255, 255, 255, 0.2);
+                color: white;
+            }
+        </style>
 	</head>
 <!-- Start Top Bar -->
 <div class="top-bar py-2">
@@ -65,7 +133,23 @@
 							<a class="nav-link" href="index.html">Home</a>
 						</li>
 						<li><a class="nav-link" href="about.html">About us</a></li>
-						<li><a class="nav-link" href="Products.html">Products</a></li>
+						<li class="nav-item dropdown">
+							<a class="nav-link dropdown-toggle" href="Products.html" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+								Products
+							</a>
+							<ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+								<li><a class="dropdown-item" href="frpmedia.html">RO Pressure Vessels & FRP Filters</a></li>
+								<li><a class="dropdown-item" href="membranes.html">Membrane Products</a></li>
+								<li><a class="dropdown-item" href="pumps.html">Pumps</a></li>
+								<li><a class="dropdown-item" href="filters.html">Filter Cartridges & Housings</a></li>
+								<li><a class="dropdown-item" href="sandmedia.html">Sand Media & Ion Exchange Resins</a></li>
+								<li><a class="dropdown-item" href="chemicals.html">Water Treatment Chemicals</a></li>
+								<li><a class="dropdown-item" href="Wastewater.html">Waste Water Equipments</a></li>
+								<li><a class="dropdown-item" href="instruments.html">Instruments & Lab Apparatus</a></li>
+								<li><a class="dropdown-item" href="disinfectants.html">Disinfection Products</a></li>
+								<li><a class="dropdown-item" href="valves.html">Valves, Couplings & Fittings</a></li>
+							</ul>
+						</li>
 						<li class="active"><a class="nav-link" href="contact.html">Contact us</a></li>
 					</ul>
 				</div>
@@ -135,7 +219,7 @@
                       </svg>
                     </div> <!-- /.icon -->
                     <div class="service-contents">
-						<p>+91 8939 167 316<br>+91 9940 438 598</p>
+						<p>+91 892 588 3227<br></p>
                     </div> <!-- /.service-contents-->
                   </div> <!-- /.service -->
                 </div>
@@ -197,6 +281,22 @@
   </div>
 
   <!-- End Contact Form -->
+
+  <!-- Start Catalog Download Section -->
+  <div class="catalog-section py-5 bg-light">
+      <div class="container">
+          <div class="row justify-content-center">
+              <div class="col-md-8 text-center">
+                  <h2 class="mb-4">Download Our Product Catalog</h2>
+                  <p class="mb-4">Get information about our complete range of products in our catalog.</p>
+                  <a href="catalogs/GenOasis_catalogue.pdf" class="btn btn-primary btn-lg" download>
+                      <i class="fas fa-download me-2"></i>Download Catalog
+                  </a>
+              </div>
+          </div>
+      </div>
+  </div>
+  <!-- End Catalog Download Section -->
 
 		
 
