--- a/Products.html
+++ b/Products.html
@@ -462,44 +462,37 @@
 
         .dropdown-menu {
             background-color: #ffffff;
-            border: none;
-            border-radius: 0;
+            border: 1px solid rgba(0, 0, 0, 0.1);
+            border-radius: 4px;
             margin-top: 0;
-            padding: 0;
+            padding: 8px 0;
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
         }
 
         .dropdown-item {
-            color: rgba(255, 255, 255, 0.7);
-            padding: 0.7rem 1.5rem;
-            transition: all 0.3s ease;
+            color: #333333;
+            padding: 8px 20px;
+            transition: background-color 0.3s ease;
         }
 
         .dropdown-item:hover {
-            background-color: rgba(255, 255, 255, 0.1);
-            color: white;
+            background-color: #f8f9fa;
+            color: #000000;
         }
 
         .dropdown:hover .dropdown-menu {
             display: block;
         }
 
-        @media (max-width: 768px) {
-            .dropdown-menu {
-                background-color: transparent;
-                border: none;
-                padding-left: 1rem;
-            }
-            
-            .dropdown-item {
-                padding: 0.5rem 1rem;
-            }
+        .nav-item.dropdown > .nav-link {
+            cursor: pointer;
         }
 
         /* Active state for dropdown items */
         .dropdown-item.active, 
         .dropdown-item:active {
-            background-color: rgba(255, 255, 255, 0.2);
-            color: white;
+            background-color: #f8f9fa;
+            color: #000000;
         }
     </style>
     <title>GenOasis - Products</title>
@@ -540,8 +533,8 @@
                         <a class="nav-link" href="index.html">Home</a>
                     </li>
                     <li><a class="nav-link" href="about.html">About us</a></li>
-                    <li class="nav-item dropdown active">
-                        <a class="nav-link dropdown-toggle" href="Products.html" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="Products.html" id="navbarDropdown" role="button">
                             Products
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -785,6 +778,18 @@
 
             closeButton.addEventListener('click', closePopup);
             overlay.addEventListener('click', closePopup);
+        });
+    </script>
+    <script>
+        document.addEventListener('DOMContentLoaded', function() {
+            // Get the Products dropdown link
+            const productsLink = document.querySelector('#navbarDropdown');
+            
+            // Add click event listener
+            productsLink.addEventListener('click', function(e) {
+                // Navigate to Products.html
+                window.location.href = 'Products.html';
+            });
         });
     </script>
 </body>
