--- a/Products.html
+++ b/Products.html
@@ -494,6 +494,22 @@
             background-color: #f8f9fa;
             color: #000000;
         }
+
+        /* Mobile Menu Button Styles */
+        .navbar-toggler {
+            border-color: #333333;
+            background-color: transparent;
+        }
+        
+        .navbar-toggler-icon {
+            background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3e%3cpath stroke='rgba(51, 51, 51, 1)' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e") !important;
+        }
+
+        @media (max-width: 768px) {
+            .navbar-toggler {
+                margin-right: 15px;
+            }
+        }
     </style>
     <title>GenOasis - Products</title>
 	<script src="https://www.google.com/recaptcha/api.js?render=6LdbbNEqAAAAAICt9O0PGfaTPi4ikCI8gBVaannf"></script>
