change caps to small

--- a/Wastewater.html
+++ b/Wastewater.html
@@ -579,7 +579,7 @@
             }
         }
     </style>
-    <title>GenOasis - Wastewater Equipments</title>
+    <title>Genoasis - Wastewater Equipments</title>
 	<script src="https://www.google.com/recaptcha/api.js?render=6LdbbNEqAAAAAICt9O0PGfaTPi4ikCI8gBVaannf"></script>
 </head>
 	<!-- Start Top Bar -->
