--- a/about.html
+++ b/about.html
@@ -120,7 +120,7 @@
 				}
 			}
 		</style>
-		<title>GenOasis - About Us</title>
+		<title>Genoasis - About Us</title>
 		<script src="https://www.google.com/recaptcha/api.js?render=6LdbbNEqAAAAAICt9O0PGfaTPi4ikCI8gBVaannf"></script>
 	</head>
 		<!-- Start Top Bar -->
