--- a/frpmedia.html
+++ b/frpmedia.html
@@ -562,7 +562,7 @@
             }
         }
     </style>
-    <title>GenOasis - RO Pressure Vessels & FRP Media Filter Solutions</title>
+    <title>Genoasis - RO Pressure Vessels & FRP Media Filter Solutions</title>
 	<script src="https://www.google.com/recaptcha/api.js?render=6LdbbNEqAAAAAICt9O0PGfaTPi4ikCI8gBVaannf"></script>
 </head>
 	<!-- Start Top Bar -->
