--- a/pumps.html
+++ b/pumps.html
@@ -450,7 +450,7 @@
             }
         }
     </style>
-    <title>GenOasis - Pumps</title>
+    <title>Genoasis - Pumps</title>
 	<script src="https://www.google.com/recaptcha/api.js?render=6LdbbNEqAAAAAICt9O0PGfaTPi4ikCI8gBVaannf"></script>
 </head>
 	<!-- Start Top Bar -->
