--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 		<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
 		<link href="css/tiny-slider.css" rel="stylesheet">
 		<link href="css/style.css" rel="stylesheet">
-		<title>GenOasis - Home</title>
+		<title>Genoasis - Home</title>
 		<script src="https://www.google.com/recaptcha/api.js?render=6LdbbNEqAAAAAICt9O0PGfaTPi4ikCI8gBVaannf"></script>
 		<style>
 			/* Navigation Dropdown Styles */
