--- a/valves.html
+++ b/valves.html
@@ -562,7 +562,7 @@
             }
         }
     </style>
-    <title>GenOasis - Disinfectants</title>
+    <title>Genoasis - Disinfectants</title>
 	<script src="https://www.google.com/recaptcha/api.js?render=6LdbbNEqAAAAAICt9O0PGfaTPi4ikCI8gBVaannf"></script>
 </head>
 	<!-- Start Top Bar -->
