updates to pages

--- a/Products.html
+++ b/Products.html
@@ -733,7 +733,7 @@
                             <li><a class="dropdown-item" href="instruments.html">Instruments & Lab Apparatus</a></li>
                             <li><a class="dropdown-item" href="disinfectants.html">Disinfection Products</a></li>
                             <li><a class="dropdown-item" href="valves.html">Valves, Couplings & Fittings</a></li>
-                            <li><a class="dropdown-item" href="ozone-systems.html">Industrial Ozone Systems</a></li>
+                            <li><a class="dropdown-item" href="atmospheric-water-generators.html">Atmospheric Water Generators</a></li>
                             <li><a class="dropdown-item" href="nanobubble-technology.html">Nanobubble Technology</a></li>
                         </ul>
                     </li>
@@ -948,19 +948,19 @@
                     </a>
                 </div>
 
-                <!-- Industrial Ozone Systems -->
+                <!-- Atmospheric Water Generators -->
                 <div class="col-lg-4 col-md-6 mb-4" data-aos="fade-up" data-aos-delay="1100">
-                    <a href="ozone-systems.html" class="text-decoration-none">
+                    <a href="atmospheric-water-generators.html" class="text-decoration-none">
                         <div class="product-card">
                             <div class="product-image">
-                                <img src="images/ozone-system.jpg" alt="Industrial Ozone Systems" onerror="this.src='images/chemicals.jpg'">
+                                <img src="images/ozone-system.jpg" alt="Atmospheric Water Generators" onerror="this.src='images/chemicals.jpg'">
                                 <div class="product-overlay">
                                     <i class="fas fa-arrow-right"></i>
                                 </div>
                             </div>
                             <div class="product-content">
-                                <h4 class="product-title">Industrial Ozone Systems</h4>
-                                <p class="product-description">Advanced ozone generation systems for water purification</p>
+                                <h4 class="product-title">Atmospheric Water Generators</h4>
+                                <p class="product-description">Technology that extracts pure drinking water from air</p>
                             </div>
                         </div>
                     </a>
