--- a/Wastewater.html
+++ b/Wastewater.html
@@ -447,7 +447,7 @@
                             <li><a class="dropdown-item" href="instruments.html">Instruments & Lab Apparatus</a></li>
                             <li><a class="dropdown-item" href="disinfectants.html">Disinfection Products</a></li>
                             <li><a class="dropdown-item" href="valves.html">Valves, Couplings & Fittings</a></li>
-                            <li><a class="dropdown-item" href="ozone-systems.html">Industrial Ozone Systems</a></li>
+                            <li><a class="dropdown-item" href="atmospheric-water-generators.html">Atmospheric Water Generators</a></li>
                             <li><a class="dropdown-item" href="nanobubble-technology.html">Nanobubble Technology</a></li>
                         </ul>
                     </li>
@@ -933,12 +933,12 @@
          </div>
      </section>
 
-     <!-- Grommed Section -->
+     <!-- Grommets Section -->
      <section class="solutions-section pt-5">
          <div class="container">
              <div class="row mb-5 align-items-center">
                  <div class="col-lg-7">
-                     <h2 class="display-5 fw-bold mb-4" data-aos="fade-right">Grommed</h2>
+                     <h2 class="display-5 fw-bold mb-4" data-aos="fade-right">Grommets</h2>
                      <p class="lead mb-4" data-aos="fade-right" data-aos-delay="200">
                          Genoasis accessories and spare parts are designed to be used on products made by Genoasis or products made by other producers. Installation of Genoasis accessories and spare parts is extremely simple and can be done without any complicated and expensive equipment needed, performance, on the other hand, reaches highest level.
                      </p>
