--- a/about.html
+++ b/about.html
@@ -596,7 +596,7 @@
 								<li><a class="dropdown-item" href="instruments.html">Instruments & Lab Apparatus</a></li>
 								                            <li><a class="dropdown-item" href="disinfectants.html">Disinfection Products</a></li>
                             <li><a class="dropdown-item" href="valves.html">Valves, Couplings & Fittings</a></li>
-                            <li><a class="dropdown-item" href="ozone-systems.html">Industrial Ozone Systems</a></li>
+                            <li><a class="dropdown-item" href="atmospheric-water-generators.html">Atmospheric Water Generators</a></li>
 							</ul>
 						</li>
 						<li><a class="nav-link" href="contact.html">Contact us</a></li>
