updates to width

--- a/about.html
+++ b/about.html
@@ -625,7 +625,7 @@
 		<section class="about-content-section py-5">
 			<div class="container">
 				<div class="row">
-					<div class="col-lg-10 mx-auto">
+					<div class="col-12">
 						<div class="about-card" data-aos="fade-up">
 							<div class="row">
 								<div class="col-12 text-center">
