--- a/filters.html
+++ b/filters.html
@@ -690,7 +690,7 @@
     <section class="content-section pt-5 pb-3">
         <div class="container">
             <div class="row">
-                <div class="col-lg-10 mx-auto">
+                <div class="col-12">
                     <div class="content-card" data-aos="fade-up">
                         <h2 class="section-title mb-3">Filters & Filter Housings</h2>
                         <p class="lead mb-4">Genoasis supplies replacement cartridges and bag filters for industries such as Oil & Gas, Food & Beverage, and Pharmaceuticals. We offer a complete range of filtration products and systems for pure water purification. To meet restocking needs, we provide competitive supply agreements and express delivery services as needed.</p>
@@ -734,7 +734,7 @@
     <section class="image-section pt-3 pb-3">
         <div class="container">
             <div class="row">
-                <div class="col-lg-10 mx-auto">
+                <div class="col-12">
                     <div class="image-container" data-aos="fade-up">
                         <img src="images/filters1.jpg" alt="Membrane Technologies" class="gallery-img">
                     </div>
@@ -747,7 +747,7 @@
     <section class="content-section pt-3 pb-3">
         <div class="container">
             <div class="row">
-                <div class="col-lg-10 mx-auto">
+                <div class="col-12">
                     <div class="content-card" data-aos="fade-up">
                         <h2 class="section-title mb-3">Filter Bags & Housing</h2>
                         <p class="lead mb-4">Filter Bags provide an economical filtration solution for a wide variety of applications. Offering excellent performance and efficiency, these filter bags provide a simple and cost‑effective way to maintain clean liquids by trapping impurities and debris.</p>
@@ -772,7 +772,7 @@
     <section class="image-section pt-3 pb-5">
         <div class="container">
             <div class="row">
-                <div class="col-lg-10 mx-auto">
+                <div class="col-12">
                     <div class="image-container" data-aos="fade-up">
                         <img src="images/filters2.jpg" alt="Filter Bags & Housing" class="gallery-img">
                     </div>
