--- a/frpmedia.html
+++ b/frpmedia.html
@@ -684,7 +684,7 @@
     <section class="intro-section py-5">
         <div class="container">
             <div class="row">
-                <div class="col-lg-10 mx-auto">
+                <div class="col-12">
                     <div class="intro-card" data-aos="fade-up">
                         <div class="intro-header mb-4">
                             <div class="intro-icon">
@@ -725,7 +725,7 @@
     <section class="content-section pt-5 pb-3">
         <div class="container">
             <div class="row">
-                <div class="col-lg-10 mx-auto">
+                <div class="col-12">
                     <div class="content-card" data-aos="fade-up">
                         <h2 class="section-title mb-4">RO Membrane Housings</h2>
                         <p class="lead mb-4">
@@ -765,7 +765,7 @@
     <section class="content-section pt-3 pb-3">
         <div class="container">
             <div class="row">
-                <div class="col-lg-10 mx-auto">
+                <div class="col-12">
                     <div class="content-card" data-aos="fade-up">
                         <h2 class="section-title mb-4">8-Inch Side Entry Pressure Vessel</h2>
                         <p class="lead mb-4">
@@ -811,7 +811,7 @@
     <section class="content-section pt-3 pb-3">
         <div class="container">
             <div class="row">
-                <div class="col-lg-10 mx-auto">
+                <div class="col-12">
                     <div class="content-card" data-aos="fade-up">
                         <div class="row align-items-center">
                             <div class="col-lg-6">
@@ -836,7 +836,7 @@
     <section class="content-section pt-3 pb-5">
         <div class="container">
             <div class="row">
-                <div class="col-lg-10 mx-auto">
+                <div class="col-12">
                     <div class="content-card" data-aos="fade-up">
                         <div class="row align-items-center mb-5">
                             <div class="col-lg-6">
