--- a/membranes.html
+++ b/membranes.html
@@ -524,7 +524,7 @@
     <section class="intro-section py-5">
         <div class="container">
             <div class="row">
-                <div class="col-lg-10 mx-auto">
+                <div class="col-12">
                     <div class="intro-card" data-aos="fade-up">
                         <div class="intro-header mb-4">
                             <div class="intro-icon">
@@ -565,7 +565,7 @@
     <section class="content-section pt-5 pb-3">
         <div class="container">
             <div class="row">
-                <div class="col-lg-10 mx-auto">
+                <div class="col-12">
                     <div class="content-card" data-aos="fade-up">
                         <h2 class="section-title mb-4">RO Membrane Technology (Reverse Osmosis)</h2>
                         <p class="lead mb-4">
@@ -591,7 +591,7 @@
     <section class="content-section pt-3 pb-3">
         <div class="container">
             <div class="row">
-                <div class="col-lg-10 mx-auto">
+                <div class="col-12">
                     <div class="content-card" data-aos="fade-up">
                         <h2 class="section-title mb-4">Nanofiltration (NF) Membranes</h2>
                         <p class="lead mb-4">
@@ -617,7 +617,7 @@
     <section class="content-section pt-3 pb-3">
         <div class="container">
             <div class="row">
-                <div class="col-lg-10 mx-auto">
+                <div class="col-12">
                     <div class="content-card" data-aos="fade-up">
                         <h2 class="section-title mb-4">Ultrafiltration (UF) Membranes</h2>
                         <p class="lead mb-4">
@@ -643,7 +643,7 @@
     <section class="content-section pt-3 pb-3">
         <div class="container">
             <div class="row">
-                <div class="col-lg-10 mx-auto">
+                <div class="col-12">
                     <div class="content-card" data-aos="fade-up">
                         <h2 class="section-title mb-4">Membrane Bioreactor (MBR) Technology</h2>
                         <p class="lead mb-4">
