--- a/sandmedia.html
+++ b/sandmedia.html
@@ -566,7 +566,7 @@
     <section class="content-section pt-5 pb-3">
         <div class="container">
             <div class="row">
-                <div class="col-lg-10 mx-auto">
+                <div class="col-12">
                     <div class="content-card" data-aos="fade-up">
                         <p class="lead mb-0">We are a leading supplier and trader of high‑quality industrial filtration materials, including silica sand, ion‑exchange resins, activated carbon, anthracite, and advanced filter media. Our products are designed to meet the highest standards in water treatment, ensuring optimal performance across a variety of applications, from municipal and industrial water purification to specialized filtration systems.</p>
                     </div>
@@ -579,7 +579,7 @@
     <section class="content-section pt-3 pb-3">
         <div class="container">
             <div class="row">
-                <div class="col-lg-10 mx-auto">
+                <div class="col-12">
                     <div class="content-card" data-aos="fade-up">
                         <h2 class="section-title mb-3">Filtration Silica Sand</h2>
                         <p class="lead mb-4">We specialize in processing raw silica sand through multi-stage processes, including washing, attrition, drying, and sieving, to produce high‑purity, well‑graded products. Our silica sand is available in various sizes, meeting US mesh specifications.</p>
@@ -620,7 +620,7 @@
     <section class="content-section pt-3 pb-3">
         <div class="container">
             <div class="row">
-                <div class="col-lg-10 mx-auto">
+                <div class="col-12">
                     <div class="content-card" data-aos="fade-up">
                         <div class="row align-items-center">
                             <div class="col-md-8">
@@ -643,7 +643,7 @@
     <section class="content-section pt-3 pb-3">
         <div class="container">
             <div class="row">
-                <div class="col-lg-10 mx-auto">
+                <div class="col-12">
                     <div class="content-card" data-aos="fade-up">
                         <div class="row align-items-center">
                             <div class="col-md-8">
@@ -715,7 +715,7 @@
     <section class="content-section pt-3 pb-3">
         <div class="container">
             <div class="row">
-                <div class="col-lg-10 mx-auto">
+                <div class="col-12">
                     <div class="content-card" data-aos="fade-up">
                         <div class="row align-items-center">
                             <div class="col-md-8">
@@ -773,7 +773,7 @@
     <section class="content-section pt-3 pb-3">
         <div class="container">
             <div class="row">
-                <div class="col-lg-10 mx-auto">
+                <div class="col-12">
                     <div class="content-card" data-aos="fade-up">
                         <div class="row align-items-center">
                             <div class="col-md-8">
@@ -818,7 +818,7 @@
     <section class="content-section pt-3 pb-5">
         <div class="container">
             <div class="row">
-                <div class="col-lg-10 mx-auto">
+                <div class="col-12">
                     <div class="content-card" data-aos="fade-up">
                         <div class="row align-items-center">
                             <div class="col-md-8">
