--- a/valves.html
+++ b/valves.html
@@ -74,15 +74,15 @@
         }
 
         .features-section {
-            padding: 80px 0;
+            padding: 60px 0;
             background-color: #f8f9fa;
         }
 
         .feature-card {
             background: white;
             border-radius: 15px;
-            padding: 30px;
-            margin-bottom: 30px;
+            padding: 20px;
+            margin-bottom: 20px;
             box-shadow: 0 5px 15px rgba(0,0,0,0.1);
             transition: transform 0.3s ease, box-shadow 0.3s ease;
             height: 100%;
@@ -94,23 +94,23 @@
         }
 
         .feature-icon {
-            width: 80px;
-            height: 80px;
+            width: 60px;
+            height: 60px;
             background: linear-gradient(135deg, #23a1dc, #1e88c5);
             border-radius: 50%;
             display: flex;
             align-items: center;
             justify-content: center;
-            margin-bottom: 20px;
+            margin-bottom: 15px;
             color: white;
-            font-size: 2rem;
+            font-size: 1.5rem;
         }
 
         .feature-title {
-            font-size: 1.5rem;
+            font-size: 1.3rem;
             font-weight: 600;
             color: #333;
-            margin-bottom: 15px;
+            margin-bottom: 12px;
         }
 
         .feature-list {
@@ -120,10 +120,12 @@
         }
 
         .feature-list li {
-            padding: 8px 0;
+            padding: 4px 0;
             border-bottom: 1px solid #eee;
             position: relative;
-            padding-left: 25px;
+            padding-left: 20px;
+            font-size: 0.9rem;
+            line-height: 1.4;
         }
 
         .feature-list li:before {
