--- a/pumps.html
+++ b/pumps.html
@@ -434,6 +434,17 @@
             color: white;
             font-weight: 600;
             font-size: 1.1rem;
+        }
+
+        .read-more-text {
+            color: #007bff;
+            font-weight: 600;
+            cursor: pointer;
+            transition: color 0.3s ease;
+        }
+
+        .read-more-text:hover {
+            color: #0056b3;
             text-transform: uppercase;
             letter-spacing: 1px;
         }
@@ -864,7 +875,7 @@
                 </div>
                 <div class="product-content">
                     <h3 class="product-title">End Suction Pumps</h3>
-                    <p class="product-description">Ideal for applications requiring solid handling or use in chemical and food processing industries. With minimal moving parts and no valves, these pumps offer a compact solution that is easy to handle and operate.</p>
+                    <p class="product-description">Ideal for applications requiring solid handling or use in chemical and food processing industries. With minimal moving parts and no valves, these pumps offer a compact solution that is easy to handle and operate. <span class="read-more-text">>> Read More</span></p>
                     </div>
                 </div>
 
@@ -878,7 +889,7 @@
                 </div>
                 <div class="product-content">
                     <h3 class="product-title">Horizontal Centrifugal Pumps</h3>
-                    <p class="product-description">High-quality horizontal centrifugal pumps designed using the latest technology to meet diverse industrial needs including chemical, water treatment, sugar, steel, and power stations.</p>
+                    <p class="product-description">High-quality horizontal centrifugal pumps designed using the latest technology to meet diverse industrial needs including chemical, water treatment, sugar, steel, and power stations. <span class="read-more-text">>> Read More</span></p>
             </div>
         </div>
 
@@ -892,7 +903,7 @@
                 </div>
                 <div class="product-content">
                     <h3 class="product-title">Vertical Multistage Pumps</h3>
-                    <p class="product-description">Reliable, technologically advanced solutions for boiler feed systems, pressure boosting, irrigation, and water treatment. Designed for high pressure and high-temperature fluids.</p>
+                    <p class="product-description">Reliable, technologically advanced solutions for boiler feed systems, pressure boosting, irrigation, and water treatment. Designed for high pressure and high-temperature fluids. <span class="read-more-text">>> Read More</span></p>
                 </div>
             </div>
 
@@ -906,7 +917,7 @@
                 </div>
                 <div class="product-content">
                     <h3 class="product-title">Sea Water FRP Pumps</h3>
-                    <p class="product-description">Constructed using high-quality fiberglass reinforced plastic (FRP), ideal for handling seawater and aggressive chemicals with excellent resistance to corrosion and abrasion.</p>
+                    <p class="product-description">Constructed using high-quality fiberglass reinforced plastic (FRP), ideal for handling seawater and aggressive chemicals with excellent resistance to corrosion and abrasion. <span class="read-more-text">>> Read More</span></p>
                 </div>
             </div>
 
@@ -920,7 +931,7 @@
                 </div>
                 <div class="product-content">
                     <h3 class="product-title">Sea Water Super Duplex Pumps</h3>
-                    <p class="product-description">Made from duplex steel, ideal for seawater applications like desalination plants and offshore operations with high resistance to corrosion and abrasion.</p>
+                    <p class="product-description">Made from duplex steel, ideal for seawater applications like desalination plants and offshore operations with high resistance to corrosion and abrasion. <span class="read-more-text">>> Read More</span></p>
                 </div>
             </div>
 
@@ -934,7 +945,7 @@
                 </div>
                 <div class="product-content">
                     <h3 class="product-title">Submersible Pumps</h3>
-                    <p class="product-description">Widely used in wells, tanks, and large containers for immersion purposes. Designed for high flow rates and ideal for both domestic and light industrial applications.</p>
+                    <p class="product-description">Widely used in wells, tanks, and large containers for immersion purposes. Designed for high flow rates and ideal for both domestic and light industrial applications. <span class="read-more-text">>> Read More</span></p>
                 </div>
             </div>
 
@@ -948,7 +959,7 @@
                 </div>
                 <div class="product-content">
                     <h3 class="product-title">Borewell Pumps</h3>
-                    <p class="product-description">Designed for deep well applications suitable for both residential and industrial use. Known for efficiency in transferring water from deep wells to the surface.</p>
+                    <p class="product-description">Designed for deep well applications suitable for both residential and industrial use. Known for efficiency in transferring water from deep wells to the surface. <span class="read-more-text">>> Read More</span></p>
                 </div>
             </div>
 
@@ -962,7 +973,7 @@
                 </div>
                 <div class="product-content">
                     <h3 class="product-title">Progressive Cavity Pumps</h3>
-                    <p class="product-description">Ideal for handling highly viscous, abrasive, and shear-sensitive fluids. Provide smooth and pulsation-free flow for applications requiring precise fluid movement.</p>
+                    <p class="product-description">Ideal for handling highly viscous, abrasive, and shear-sensitive fluids. Provide smooth and pulsation-free flow for applications requiring precise fluid movement. <span class="read-more-text">>> Read More</span></p>
                 </div>
             </div>
 
@@ -976,7 +987,7 @@
                 </div>
                 <div class="product-content">
                     <h3 class="product-title">Air Operated Diaphragm Pumps (AODD)</h3>
-                    <p class="product-description">Designed for dosing and transferring thin to viscous fluids in various industries. Offer low maintenance, energy efficiency, and ease of operation.</p>
+                    <p class="product-description">Designed for dosing and transferring thin to viscous fluids in various industries. Offer low maintenance, energy efficiency, and ease of operation. <span class="read-more-text">>> Read More</span></p>
                 </div>
             </div>
 
@@ -990,7 +1001,7 @@
                 </div>
                 <div class="product-content">
                     <h3 class="product-title">Swimming Pool Pumps</h3>
-                    <p class="product-description">Comprehensive range for both residential and commercial pool applications. Designed for energy-efficient operation, optimized filtration quality, and low noise levels.</p>
+                    <p class="product-description">Comprehensive range for both residential and commercial pool applications. Designed for energy-efficient operation, optimized filtration quality, and low noise levels. <span class="read-more-text">>> Read More</span></p>
                 </div>
             </div>
         </div>
